--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
 .App {
   text-align: center;
+  color: #fff;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  margin-bottom: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h5 {
+  margin-top: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.fileListContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  padding: 0 20px;
+}
+.fileListContainer > li {
+  background-color: #4f74ff;
+  color: #fff;
+  padding: 16px;
+  margin: 8px;
+  border-radius: 10px;
+  list-style: none;
+  width: 100%;
+  height: 100%;
+  cursor: move;
+}
+.dropArea:before {
+  content: "Drop Here";
+  text-transform: uppercase;
+  width: 100%;
+  height: 100%;
+  border: 2px dashed #fff;
+  border-radius: 3px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 30px 0;
+}
+.fileListContainer > li > div {
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btnConfirm {
+  background-color: #d103fc;
+  cursor: pointer;
+  padding: 20px 30px;
+  display: inline-block;
+  font-weight: 800;
 }
